# TP1_programacion_LAyC

./: .gitignore  LICENCE  README.md
A requisitos/: README.md
B teoria/: Notas Rapidas.txt  README.md
B teoria/Ejemplos/CPP/1)Punteros/: Punteros.c
B teoria/Ejemplos/CPP/2)Funciones/: 1_funcion_sin_retorno.c  2_funcion_con_retorno.c  3_funcion_parametrizada.c  4_funcion_parametrizada_puntero.c
B teoria/Ejemplos/CPP/3)Struct/: 1_struct_comun.c  2_struct_puntero.c  3_struct_puntero_funcion.c
B teoria/Ejemplos/QT/Boton_Incremento/: mainwindow.cpp  mainwindow.ui
B teoria/Ejemplos/QT/Boton_Incremento/Boton_Incremento/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
B teoria/Ejemplos/QT/Contador/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
B teoria/Ejemplos/QT/Reloj2/: mainwindow.cpp  mainwindow.h  mainwindow.ui
C solucion/: README.md
C solucion/CalculadoraQt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
D presentacion/: README.md
